# institut_work

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  start.sh
settings/: asgi.py  settings.py  urls.py  wsgi.py
static/: main.css
study/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
study/helper/: views_helper.py
study/migrations/: 0001_initial.py  0002_homework_student_image_teacher_image_teams_image.py  0003_auto_20220622_1011.py  0004_auto_20220628_1325.py
study/templates/: base.html  deportament.html  home_work.html  index.html  student_list.html
study/templates/registration/: login.html  register.html
study/views/: views.py  views_auth.py
