[tool.poetry]
name = "institut_work"
version = "0.1.0"
description = ""
authors = ["Александр Мельников <AMelnikov@migcredit.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^9.1.1"
Django = "^4.0.5"
django-bootstrap-v5 = "^1.0.11"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
